      Sowieso werd al alleen OpenCart 2.3.0.2 nog ondersteund.
OC3 = OpenCart 3
PS  = PrestaShop (1.7.6+) (1.6.x- wordt niet meer ondersteund sinds 6.0.0)
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce 5 (WC 4 en 3 zullen waarschijnlijk ook werken)
WC2 = WooCommerce 2 (wordt niet meer ondersteund vanaf onze versie 5.5.2)

6.3.8 (2022-0?-??)
------------------
Bugs:
- WC: Responding to order status changes did not work completely correctly:
  - Starting state of new orders (normally pending) was not reacted on.
  - Custom states defined by the "WooCommerce order status manager" were not
    reacted on.
- PS: Vermeende precisie van berekend btw-bedrag blijkt toch te hoog. Verlaagd
  tot een goede halve cent.
- VM: Call to method VirtueMartModelOrders::getMyOrderDetails(), where
  VirtueMartModelOrders::getOrder() is the correct method to call (no need for
  access checks).

Refactorings:
- VM: Logic of Joomla/VirtueMart/Invoice/Source::getInvoiceReference() and
  getInvoiceDate() moved to getInvoiceReferenceOrder() resp.
  getInvoiceDateOrder().

6.3.7 (2022-01-22)
------------------
Bugs:
- PS: Notice undefined index unit_amount in Creator.php, line 166

Refactorings:
- Documentation
- Case of Classes was not always consistent (API => Api)

6.3.6 (2022-01-15)
------------------
Bugs:
- VM: In some cases amounts are calculated based on vat rates. The "vat free"
  vat rate is stored as -1, to be able to differ it from the "0% vat rate". But
  this means that the calculations should use 0% instead of -1%. This affects
  all plugins but it looks like that only for VM it can really cause problems.
- VM: Use of is_numeric() replaced by ctype_digit() (or other more or less
  similar functions) as is_numeric()'s definition of a string being numeric is
  too accepting for our case. This affects all plugins but it looks like that
  only for VM it can really cause problems.
- WOO: When creating variant lines, we should ignore order item metadata that is